my personal website

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,20 +1,13 @@
 # Authors
 
 billy_rick:
-  name: Billy Rick
+  name: Yang Ronghai
   web: http://thewhip.com
-  email: billy@rick.com
-  bio: "What do you want, jewels? I am a very extravagant man."
+  email: ronghai1130@gmail.com
+  bio: "PhD Pre in CUHK"
   avatar: bio-photo-2.jpg
-  twitter: extravagantman
-  google:
-    plus: BillyRick
+  twitter: https://twitter.com/YRonghai
+  facebook: https://www.facebook.com/ronghai.yang.5
+  github: https://www.facebook.com/ronghai.yang.5
 
-cornelius_fiddlebone:
-  name: Cornelius Fiddlebone
-  email: cornelius@thewhip.com
-  bio: "I ordered what?"
-  avatar: bio-photo.jpg
-  twitter: rhymeswithsackit
-  google:
-    plus: CorneliusFiddlebone
+
