--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site wide configuration
 
-title:            Site Title
+title:            YANG, Ronghai
 locale:           en_US
-url:              http://localhost:4000
+url:              http://personal.ie.cuhk.edu.hk/~yr013
 
 
 # Jekyll configuration
@@ -26,13 +26,13 @@ kramdown:
 
 # Site owner
 owner:
-  name: Your Name
+  name: Yang Ronghai
   avatar: bio-photo.jpg
-  bio: "Describe your self."
-  email: 
+  bio: "PhD Pre in CUHK."
+  email: yr013@ie.cuhk.edu.hk
   disqus-shortname: 
-  twitter: #username
-  facebook: #username
+  twitter: YRonghai
+  facebook: ronghai.yang.5
   google:
     plus: #username
     analytics: 
@@ -40,7 +40,7 @@ owner:
     ad-client: 
     ad-slot: 
   bing-verify: 
-  github: #username
+  github: YangRonghai
   stackoverflow: #http://stackoverflow.com/users/123456/username
   linkedin: #username
   instagram: #username
