--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,13 @@
 # Site navigation links
 
-- title: About
-  url: /about/
+- title: Home
+  url: //home/
 
-- title: Sample Posts
-  url: /posts/
+- title: Blogs
+  url: //posts/
 
-- title: Theme Setup
-  url: /theme-setup/
+- title: Research
+  url: //research/
 
-- title: Made Mistakes
-  url: http://mademistakes.com
+- title: Teaching
+  url: //teaching
